# string-scorer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: unit-tests.yml
string_scorer/: database.py  inference.py  server.py
string_scorer/frontend/: package-lock.json  package.json
string_scorer/frontend/public/: index.html
string_scorer/frontend/src/: App.css  Dashboard.js
string_scorer/static/css/: style.css
string_scorer/static/js/: app.js
string_scorer/templates/: index.html
tests/: test_database.py  test_server.py
tests/integration/: test_integration.py
tests/integration/fixtures/: sentences.txt
tests/unit/: test_inference.py
